--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,9 @@
 {
+   "name":"server",
+  "description": "",
+  "version": "1.0.0",
+  "main":"server.js",
+  
   "dependencies": {
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
