--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,8 @@
 {
-   "name":"server",
+  "name":"server",
   "description": "",
   "version": "1.0.0",
   "main":"server.js",
-  
   "dependencies": {
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
@@ -16,7 +15,8 @@
     "multer": "^1.4.5-lts.1"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "build":"npm i"
   }
+
 }
